Bug 150723 - assertion failed after adding .jar to Classpath (gtk only?)
Summary: assertion failed after adding .jar to Classpath (gtk only?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-08-31 15:04 UTC by Terrence Enger
Modified: 2022-09-02 19:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace from core file after assertion (7.69 KB, text/plain)
2022-08-31 15:07 UTC, Terrence Enger
Details
bt with debug symbols (10.97 KB, text/plain)
2022-08-31 17:51 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2022-08-31 15:04:20 UTC
STR
(1) At command line, 

        rm -rf /tmp/bug_20220830a/*

        SAL_USE_VCLPLUGIN=gtk3 \
            instdir/program/soffice \
            -env:UserInstallation=file:///tmp/bug_20220830a 

    LibreOffice displays Start Center.
    (For comparison, there is no crash if SAL_USE_VCLPLUGIN=gen.)

(2) Take menu options Tools > Options.  Program displays dialog
    "Options - LibreOfficeDev".

(3) In left pane, select LibreOfficeDev > Advanced.  The right pane is
    titled "Java Options" and it shows list of "java runtime
    environments (JRE) already installed"; I see three (two of them
    different), and the first is selected.

(4) Click button <Class Path...>.  Program displays dialog "Class
    Path".  The list "Assigned folders and archives" is empty.

(5) Click button <Add Archive...>, and in file browser select, let us
    say, /usr/share/java/mariadb-java-client.jar.  LO displays that
    pathname in the list.

(6) Click button <OK>.  Program closes dialog "Class Path" and returns
    focus to "Java Options".

(7) Click button <Class Path...>.  Program displays dialog "Class
    Path" showing the previously added file.

(8) Click button <OK>.  Program crashes with terminal messages (lines
    rewrapped) ...

        soffice.bin:
            /home/terry/lo_hacking/git/libo6/vcl/unx/gtk3/gtkinst.cxx:6246:
            virtual Point {anonymous}::GtkInstanceWindow::get_position() const:
            Assertion `!get_visible()' failed.
        soffice.bin:
            /home/terry/lo_hacking/git/libo6/include/vcl/vclptr.hxx:110:
            VclPtr<reference_type>::~VclPtr() [with reference_type =
            VclAbstractDialog]:
            Assertion `(!m_rInnerRef.get() || m_rInnerRef->isDisposed() ||
                        m_rInnerRef->getRefCount() > 1) &&
                        "someone forgot to call dispose()"' failed.

        Fatal exception: Signal 6


These observations are from a local build of commit addc3016
(2022-08-13), built and running on debian-buster, configured ...

    --with-vendor=Terrence Enger
    --with-jdk-home=/usr/lib/jvm/default-java
    --enable-split-debug
    --enable-gdb-index
    --enable-ld=gold
    --enable-option-checking=fatal
    --enable-dbgutil
    --enable-debug
    --without-system-postgresql
    --without-myspell-dicts
    --with-extra-buildid
    --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src
    --without-package-format
    --enable-odk
    # (2022-08-06, tje) On debian-buster, g++ 8.3.0 compiling idxdict.cxx
    # complains
    #    ... unrecognized command line option -Wdeprecated-copy-dtor
    CXXFLAGS=-Wno-deprecated-copy-dtor


For comparison, I see no crash in bibisect repository linux-64-7.5 sha
27892a53e (2022-08-23 08:25Z).  Despite reporting a crash, I am
leaving this report at normal priority because I suspect that my
configuration parameters contributed to the result.
Comment 1 Terrence Enger 2022-08-31 15:07:23 UTC
Created attachment 182115 [details]
backtrace from core file after assertion

This backtrace is from the LibreOffice identified in the bug
description, built and running on debian-buster.
Comment 2 Julien Nabet 2022-08-31 17:51:48 UTC
Created attachment 182122 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2022-08-31 17:54:18 UTC
Caolán: thought you might be interested in this one since it seems gtk related.
Comment 4 Caolán McNamara 2022-08-31 19:35:44 UTC
https://gerrit.libreoffice.org/c/core/+/139134 should solve it
Comment 5 Commit Notification 2022-09-01 07:52:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a21d29e77af57758c2fb54e1592db3d7ed675f2a

tdf#150723 "run" will make the dialog visible like "show"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Terrence Enger 2022-09-02 19:09:06 UTC
I see no crash in commit 071fc970 (2022-09-02 14:28Z), configured,
built, and running as described in the bug description.

Thank you, Caolán.  I am setting bug status VERIFIED FIXED.