tdf#150723 "run" will make the dialog visible like "show"

so make run drop m_aPosWhileInvis like show

Change-Id: Id7c024c487baaa0b2fd9500888e953b9b808921d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139134
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>